[package]
name = "allnero-bot"
version = "0.1.0"
authors = ["DEADBLACKCLOVER <deadblackclover@protonmail.com>"]
description = "Mastodon bot"
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/Allnero/allnero-bot"
repository = "https://github.com/Allnero/allnero-bot"
keywords = ["allnero", "blockchain", "monero"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.4"
serde = { version = "1.0.92", features = ["derive"] }